# JuntosMais

./: .env  README.md  angular.json  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  db.py  dockerfile  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  users.db
frontend/: angular.json  dockerfile  nginx.conf
frontend/src/app/: app.routes.server.ts  app.routes.ts  app.ts  auth.interceptor.ts  auth.service.ts  campanhas.service.ts  doacoes.service.ts  ngos.service.ts
frontend/src/app/add-ong-component/: add-ong-component.html  add-ong-component.sass  add-ong-component.ts
frontend/src/app/auth-component/: auth-component.html  auth-component.sass  auth-component.ts
frontend/src/app/configuracoes-component/: configuracoes-component.sass
src/: index.html  main.server.ts  styles.sass
src/app/: app.html  app.routes.ts  app.sass  app.spec.ts  app.ts  auth.service.ts
src/app/add-ong-component/: add-ong-component.html  add-ong-component.ts
src/app/auth-component/: auth-component.ts
src/app/campanhas-list/: campanhas-list.component.html  campanhas-list.component.sass  campanhas-list.component.ts
src/app/configuracoes-component/: configuracoes-component.html  configuracoes-component.sass  configuracoes-component.ts
src/app/donation-component/: donation-component.html  donation-component.ts
src/app/header/: header.component.html  header.component.sass  header.component.ts
src/app/home-component/: home-component.html  home-component.sass  home-component.ts
src/assets/data/: ongs.json
(+7 files in other folders)
